# dd_chain_explorer

./: .dockerignore  .docs-last-hash  .gitguardian.yml  .gitignore  Makefile  README.md  docker-compose.yml  lake_ROADMAP.md  read_doc_dmcase_v3.odt  z_TODOs.md  z_big_requirementz.txt  z_pesquisa.txt
.agent-utils/: README.md  lake_schema_state.json
.github/: PULL_REQUEST_TEMPLATE.md  README.md  copilot-instructions.md  documentation.instructions.md
apps/dabs/job_ddl_setup/src/: pyproject.toml
apps/dabs/job_ddl_setup/src/dd_chain_explorer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
apps/dabs/job_delta_maintenance/src/batch/dm_delta_maintenance/: pyproject.toml
apps/dabs/src/: pyproject.toml  setup.py
apps/dabs/src/batch/: reconcile_orphan_blocks.py
apps/dabs/src/batch/batch_contracts/: 1_s3_to_bronze_contracts_txs.py
apps/dabs/src/batch/ddl/: 1_create_bronze_tables.py  4_create_gold_views.py  fallback.md  setup_ddl.py
apps/dabs/src/batch/dm_delta_maintenance/: README.md  monitor.py  optimize_bronze.py  optimize_gold.py  optimize_silver.py  pyproject.toml  vacuum.py
apps/dabs/src/batch/dm_delta_maintenance/dm_delta_maintenance.egg-info/: PKG-INFO  SOURCES.txt
apps/dabs/src/batch/dm_export_gold/: pyproject.toml
apps/dabs/src/batch/dm_export_gold/dm_export_gold.egg-info/: PKG-INFO  SOURCES.txt
apps/dabs/src/batch/maintenance/: 4_monitor_tables.py  maintenance.py
apps/dabs/src/batch/periodic/: 1_get_popular_contracts.py  3_popular_contracts_scd2.py  4_export_gold_to_s3.py  5_export_gold_tables.py
apps/dabs/src/dd_chain_explorer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
apps/dabs/src/dd_chain_explorer/batch_contracts/: bronze_to_silver.py  s3_to_bronze.py
apps/dabs/src/dd_chain_explorer/ddl/: setup_ddl.py
apps/dabs/src/streaming/: 4_pipeline_ethereum.py  5_pipeline_app_logs.py
dabs/: databricks.yml
doc/: .~lock.data_master_v4.odt#
docs/: 01_architecture.md  02_data_capture.md  03_data_processing.md  04_data_ops.md  05_data_serving.md  06_fin_ops.md  06_roadmap.md  07_roadmap.md  08_report_finops.md  README.md  ROADMAP.md  integration_test_rules.md  reduce_costs_kinesis.md  report_finops.md  report_lake_schemas.md
operations/: docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  prometheus.prod.yml  prometheus.yml
scripts/: 0_create_dm_v3_chain_explorer_structure.sh  0_create_dm_v3_structure.sh  1_create_swarm_networks.sh  1_start_cluster_swarm.sh  2_query_swarm_scylla.sh  cp_airflow_dags.sh  cp_prometheus_conf.sh  delete_images.sh  delete_volumes.sh  dev_dlt_integration_test.sh  dev_integration_test.sh  empty_s3_bucket.sh  hml_dlt_integration_test.sh  hml_integration_test.sh  lazy_helper.py  (+21 more)
utils/: README.md  pyproject.toml
utils/src/dm_chain_utils/: __init__.py  api_keys_manager.py  dm_cloudwatch_logger.py  dm_dynamodb.py  dm_etherscan.py  dm_firehose.py  dm_kafka_admin.py  dm_kafka_client.py  dm_kinesis.py  dm_logger.py  dm_msk_iam.py  dm_parameter_store.py  dm_redis.py  dm_schema_reg_client.py  dm_sqs.py  dm_web3_client.py
utils/tests/unit/: test_cloudwatch_logger.py  test_kafka_admin.py  test_kafka_client.py  test_kinesis.py  test_schema_reg_client.py  test_sqs.py  test_web3_client.py
(+961 files in other folders)
