[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dm-chain-utils"
version = "0.2.1"
description = "Shared Python utilities for dd_chain_explorer Docker applications"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "marcoaureliomenezes", email = "marcoaurelioreislima@gmail.com" }
]
license = { text = "MIT" }
dependencies = [
    "requests>=2.28.0",
    "web3>=7.8.0",
    "boto3>=1.26.0",
    "hexbytes>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
    "faker>=18.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dm_chain_utils"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
