[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "dd_chain_explorer"
version = "0.1.0"
requires-python = ">=3.10"
description = "DDL setup and table verification for DD Chain Explorer Unity Catalog"

[project.scripts]
dd-setup-ddl    = "dd_chain_explorer.ddl.setup_ddl:main"
dd-check-tables = "dd_chain_explorer.check.check_tables:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["dd_chain_explorer*"]
